--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
                 <li>
                     <a href="#">
                         <img src="assets/images/img_banner01.jpg" alt="">
-                        <p><img src="assets/images/icon_dotArrow.png" alt="">VAL조각 이벤트</p>
+                        <p><img src="assets/images/icon_dotArrow.svg" alt="">VAL조각 이벤트</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="assets/images/img_banner02.jpg" alt="">
-                        <p><img src="assets/images/icon_dotArrow.png" alt="">사이VAL대학교</p>
+                        <p><img src="assets/images/icon_dotArrow.svg" alt="">사이VAL대학교</p>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <img src="assets/images/img_banner01.jpg" alt="">
-                        <p><img src="assets/images/icon_dotArrow.png" alt="">VAL조각 이벤트</p>
+                        <p><img src="assets/images/icon_dotArrow.svg" alt="">VAL조각 이벤트</p>
                     </a>
                 </li>
             </ul>
             <h4>// 발로란트 공식 채널</h4>
             <div class="channelGroup">
-                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel01.png" alt="발로란트 채널"></a>
-                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel02.png" alt="발로란트 유튜브"></a>
-                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel03.png" alt="발로란트 인스타그램"></a>
-                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel04.png" alt="발로란트 페이스북"></a>
+                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel01.svg" alt="발로란트 채널"></a>
+                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel02.svg" alt="발로란트 유튜브"></a>
+                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel03.svg" alt="발로란트 인스타그램"></a>
+                <a href="#" target="_blank" title="새창열림"><img src="assets/images/icon_channel04.svg" alt="발로란트 페이스북"></a>
             </div>
             <button type="button" id="btnMenuclose">메뉴닫기</button>
         </div><!-- leftmenu end -->
@@ -70,7 +70,10 @@
             </div>
             <div class="visualInner">
                 <div class="visualText">
-                    <div class="textValorant"><img src="assets/images/text_valorant_red.png" alt="VALORANT"></div>
+                    <div class="textValorant">
+                        <img src="assets/images/text_valorant_red.png" alt="VALORANT" class="mobileHide">
+                        <img src="assets/images/text_valorant_red_m.png" alt="VALORANT" class="mobileShow">
+                    </div>
                     <div class="textEffectHidden">
                         <div class="textEffect titleLg">에볼루션</div>
                     </div>
