--- a/login_off.html
+++ b/login_off.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/popup.css">
 
     <script src="assets/js/lib/jquery-1.12.4.min.js"></script>
     <script src="assets/js/lib/gsap.min.js"></script>
@@ -19,6 +20,7 @@
     <script src="assets/js/lib/swiper.min.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/ui.js"></script>
+    <script src="assets/js/popup.js"></script>
 
 </head>
 <body>
@@ -93,7 +95,6 @@
         <div class="reservationSection">
             <div id="target"></div>
             <div class="scrolltop"><img src="assets/images/text_valorant_vertical.png" alt="valorant"/></div>
-            <!-- <div class="effectLayer effectLayer01 front" data-bottom-top="transform: translate3d(0, 500px, 0)" data-top-bottom="transform: translate3d(0, -500px, 0)"><img src="assets/images/text_valorant_vertical.png" alt="valorant"/></div> -->
             <div class="reservationInner">
                 <div class="reservationArea">
                     <ul class="inputList">
