--- a/popup_sample.html
+++ b/popup_sample.html
@@ -193,12 +193,12 @@
                     <div class="modarBody">
                         <h3 class="popupTitleLg">이벤트<br />공유하기</h3>
                         <!-- [전달사항] value 값에 복사할 url을 넣어주세요. -->
-                        <input type="text" value="공유 url 넣기" id="input_url" style="position: absolute;top: -9999em;">
+                        <input type="text" value="복사할 url" id="inputUrl" style="position: absolute;top: -9999em;">
                         <div class="shareBtnGroup">
-                            <button type="button" onclick="urlCopy();" class="shareUrl CloseModar ">url</button>
-                            <button type="button" onclick="toastPopup();" class="shareKakao CloseModar">카카오톡</button>
-                            <button type="button" onclick="toastPopup();" class="shareFacebook CloseModar">페이스북</button>
-                            <button type="button" onclick="toastPopup();" class="shareTwitter CloseModar">트위터</button>
+                            <button type="button" onclick="urlCopy();" class="shareUrl CloseModar">url</button>
+                            <button type="button" class="shareKakao CloseModar">카카오톡</button>
+                            <button type="button" class="shareFacebook CloseModar">페이스북</button>
+                            <button type="button" class="shareTwitter CloseModar">트위터</button>
                         </div>
                     </div><!-- modarBody end -->
                     <button type="button" class="btnCloseModar">닫기</button> 
