--- a/login_on.html
+++ b/login_on.html
@@ -124,7 +124,7 @@
                         </ul>
                         <span class="infoGray">*6월 28일부터 카드 오픈 가능</span>
                         <div class="eventBubble">
-                            <p>친구 초대 10명 완료 시 <img src="assets/images/img_pointx10.svg" alt=""> 100% 지급!</p>
+                            <p>친구 초대 10명 완료 시 <br class="mobileShow" /><img src="assets/images/img_pointx10.svg" alt=""> 100% 지급!</p>
                         </div>
                         <ul class="dotList">
                             <li>사전예약 완료 시 <b>에피소드7: 에볼루션 카드 1장</b> 즉시 지급</li>
@@ -200,15 +200,15 @@
                 <div class="updateThumbSlide">
                     <div class="thumbItem">
                         <a href="#" target="_blank" title="새창열림">
-                            <p class="Thumb">
-                                <video preload="true" muted="" loop="" playsinline="" autoplay src="https://assets.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt778f65cedfee54fd/63bcad5b08dfb21202a7794d/VAL_Ep6_Homepage-CG-Video_V5.mp4" poster="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blte299f23c6e55ebed/63bcad4899e03c1edced9b6f/VAL_Ep6_Homepage-CG-Still.jpg">
-                                </video>
-                            </p>
+                            <p class="Thumb"><img src="assets/images/img_news02.jpg" alt=""></p>
                         </a>
                     </div>
                     <div class="thumbItem">
                         <a href="#" target="_blank" title="새창열림">
-                            <p class="Thumb"><img src="assets/images/img_news02.jpg" alt=""></p>
+                            <p class="Thumb">
+                                <video preload="true" muted="" loop="" playsinline="" autoplay src="https://assets.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt778f65cedfee54fd/63bcad5b08dfb21202a7794d/VAL_Ep6_Homepage-CG-Video_V5.mp4" poster="https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blte299f23c6e55ebed/63bcad4899e03c1edced9b6f/VAL_Ep6_Homepage-CG-Still.jpg">
+                                </video>
+                            </p>
                         </a>
                     </div>
                     <div class="thumbItem">
