--- a/login_on.html
+++ b/login_on.html
@@ -141,8 +141,7 @@
                     <p class="date">2023.06.28</p>
                     <div class="title">
                         <div class="textEffectHidden">
-                            <h3 class="textEffect"><span>에피소드7: 에볼루션</span>과
-                            </h3>
+                            <h3 class="textEffect"><span>에피소드7: 에볼루션</span>과</h3>
                         </div>
                         <div class="textEffectHidden">
                             <h3 class="textEffect">함께 찾아오는</h3>
@@ -152,12 +151,180 @@
                         </div>
                     </div>
                     <p class="text">
-                        사전예약으로 획득한 에피소드7: 에볼루션 카드 오픈 기회와 함께,<br />
-                        새로운 미션 이벤트가 요원 여러분을 기다립니다.
+                        사전예약으로 획득한 에피소드7: 에볼루션 카드<br class="mobileShow" /> 오픈 기회와 함께,<br class="mobileHide" />
+                        새로운 미션 이벤트가<br class="mobileShow" /> 요원 여러분을 기다립니다.
                     </p>
                 </div><!-- productText end -->
                 <div class="productSlide">
+                    <div class="productSlidePc">
+                                                
 
+                        <ul class="flip-card-container">
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                        <div class="productSlideBubble">
+                                            한정판 총기 장식부터<br> 고급 게이밍 기어까지<br> 30여가지의 경품 획득 가능!
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_02.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_03.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_04.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_05.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_06.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <img src="assets/images/card_flip_01.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <img src="assets/images/card_flip_07.png" alt="Avatar" style="width:370px;height:530px;">
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                        <p style="margin-left:20px;">
+                            <span id="currntCardNumber"></span> // <span id="maxCardNumber"></span>
+                            <button type="button" class="btnI"><img src="assets/images/img_i_lg.svg" alt="i"></button>
+                        </p>
+                        <div>
+                            <button id="btnPrev" style="border:1px solid #000;padding:10px;background:#ddd;">&lt;</button>
+                            <button id="btnNext" style="border:1px solid #000;padding:10px;background:#ddd;">&gt;</button>
+                        </div>
+
+
+                    </div><!-- productSlidePc end -->
+                    <div class="productSlideMWrap">
+                        <div class="productSlideM">
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="productSlideBubble">
+                                        한정판 총기 장식부터<br /> 고급 게이밍 기어까지<br /> 30여가지의 경품 획득 가능!
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_02.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_03.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_04.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_05.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_06.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flip-card">
+                                <div class="flip-card-inner">
+                                    <div class="flip-card-front">
+                                        <p><img src="assets/images/card_flip_01.png" alt="" ></p>
+                                    </div>
+                                    <div class="flip-card-back">
+                                        <p><img src="assets/images/card_flip_07.png" alt="" ></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- productSlideM end -->
+                        <div class="productSlideMControl">
+                            <div class="number">
+                                <p>00</p> // <span></span>
+                            </div>
+                            <button type="button" class="btnI"><img src="assets/images/img_i_sm.svg" alt="i"></button>
+                        </div><!-- productSlideMControl -->
+                    </div><!-- productSlideMWrap end -->
                 </div><!-- productSlide end -->
             </div><!-- productInner end -->
         </div><!-- productSection end -->
@@ -236,5 +403,6 @@
     <footer id="riotbar-footer"></footer>
     <script defer="defer" src="https://cdn.rgpub.io/public/live/riotbar/latest/kr-valorant-evergreen.ko_KR.js"></script><!-- 라이엇바 상하단 js -->
     
+ 
 </body>
 </html>
