--- a/popup_sample.html
+++ b/popup_sample.html
@@ -6,21 +6,21 @@
     <title>발로란트 에볼루션</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="https://lolstatic-a.akamaihd.net/webfonts/live/css/valorant/fonts.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/popup.css">
 
-    
     <script src="assets/js/lib/jquery-1.12.4.min.js"></script>
     <script src="assets/js/lib/gsap.min.js"></script>
     <script src="assets/js/lib/ScrollTrigger.min.js"></script>
+    <script src="assets/js/lib/skrollr.min.js"></script>
     <script src="assets/js/ScrambleTextPlugin.js"></script>
-    <script src="assets/js/lib/swiper.min.js"></script>
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/popup.js"></script>
+
 </head>
 <body>
 
