--- a/login_on.html
+++ b/login_on.html
@@ -124,7 +124,7 @@
                         </ul>
                         <span class="infoGray">*6월 28일부터 카드 오픈 가능</span>
                         <div class="eventBubble">
-                            <p>친구 초대 10명 완료 시 <br class="mobileShow" /><img src="assets/images/img_pointx10.svg" alt="포인트 x10" class="mobileHide"><img src="assets/images/img_pointx10_m.svg" alt="포인트 x10" class="mobileShowInline"> 100% 지급!</p>
+                            <p>친구 초대 10명 완료 시 <br class="mobileShow" /><img src="assets/images/img_pointx10.png" alt="포인트 x10" class="mobileHide"><img src="assets/images/img_pointx10_m.png" alt="포인트 x10" class="mobileShowInline"> 100% 지급!</p>
                         </div>
                         <ul class="dotList">
                             <li>사전예약 완료 시 <b>에피소드7: 에볼루션 카드 1장</b> 즉시 지급</li>
