--- a/error.html
+++ b/error.html
@@ -13,6 +13,7 @@
     <script src="assets/js/lib/ScrollTrigger.min.js"></script>
     <script src="assets/js/lib/skrollr.min.js"></script>
     <script src="assets/js/ScrambleTextPlugin.js"></script>
+    <script src="assets/js/ui.js"></script>
     
 </head>
 <body>
