--- a/login_on.html
+++ b/login_on.html
@@ -484,7 +484,7 @@
                     <div class="productSlideM">
                         <div class="flip-card">
                             <div class="flip-card-inner">
-                                <div class="flip-card-front">
+                                <div class="flip-card-front Firstcard">
                                     <p><img src="assets/images/card_flip_01.png" alt="" ></p>
                                 </div>
                                 <div class="productSlideBubble">
