--- a/login_off.html
+++ b/login_off.html
@@ -155,7 +155,7 @@
                 </div><!-- reservationArea end -->
             </div><!-- reservationInner end -->
         </div><!-- reservationSection end -->
-        
+
         <div class="productSection">
             <div class="productInner">
                 <div class="productText">
@@ -505,7 +505,7 @@
                     <div class="productSlideM">
                         <div class="flip-card">
                             <div class="flip-card-inner">
-                                <div class="flip-card-front">
+                                <div class="flip-card-front Firstcard">
                                     <p><img src="assets/images/card_flip_01.png" alt="" ></p>
                                 </div>
                                 <div class="productSlideBubble">
