--- a/login_off.html
+++ b/login_off.html
@@ -64,6 +64,7 @@
             </div>
             <button type="button" id="btnMenuclose">메뉴닫기</button>
         </div><!-- leftmenu end -->
+        <div class="dim"></div>
 
         <div class="visualSection">
             <div class="visualVedio">
