--- a/login_on.html
+++ b/login_on.html
@@ -63,6 +63,7 @@
             </div>
             <button type="button" id="btnMenuclose">메뉴닫기</button>
         </div><!-- leftmenu end -->
+        <div class="dim"></div>
 
         <div class="visualSection">
             <div class="visualVedio">
