--- a/error.html
+++ b/error.html
@@ -6,6 +6,7 @@
     <title>발로란트 에볼루션</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="https://lolstatic-a.akamaihd.net/webfonts/live/css/valorant/fonts.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <script src="assets/js/lib/jquery-1.12.4.min.js"></script>
@@ -26,7 +27,7 @@
                 <div class="textEffectHidden">
                     <div class="textEffect titleXl">에볼루션</div>
                 </div>
-                <div class="textMd colorRed"><span class="scrambleText" id="textEpisode"></span> // EVOLUTION</div>
+                <div class="textMd colorRed fontLtPro"><span class="scrambleText fontLtPro" id="textEpisode"></span> // EVOLUTION</div>
                 <p>
                     죄송합니다. 페이지를 찾을 수 없습니다.<br />
                     잠시 후 다시 시도해보시기 바라며,<br class="mobileShow" /> 주소가 정확한지 다시 확인해주세요.
