--- a/end.html
+++ b/end.html
@@ -6,6 +6,7 @@
     <title>발로란트 에볼루션</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="https://lolstatic-a.akamaihd.net/webfonts/live/css/valorant/fonts.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <script src="assets/js/lib/jquery-1.12.4.min.js"></script>
@@ -26,7 +27,7 @@
                 <div class="textEffectHidden">
                     <div class="textEffect titleXl">에볼루션</div>
                 </div>
-                <div class="textMd colorRed"><span class="scrambleText" id="textEpisode"></span> // EVOLUTION</div>
+                <div class="textMd colorRed fontLtPro"><span class="scrambleText fontLtPro" id="textEpisode"></span> // EVOLUTION</div>
                 <p>
                     이벤트가 종료되었습니다.<br />
                     다음 이벤트를 기대해주세요!
