--- a/login_off.html
+++ b/login_off.html
@@ -128,7 +128,7 @@
                             <div class="reservationCheck">
                                 <input type="checkbox" id="reservationService">
                                 <label for="reservationService">[필수] 15세 이상이며, 이벤트 유의사항에 동의합니다.</label>
-                                <button type="button" class="btnPrivacy">자세히 보기</button>
+                                <button type="button" class="btnPrivacy" onclick="modarOpen('#modarCardItem');">자세히 보기</button>
                             </div>
                         </li>
                         <li>
@@ -892,6 +892,55 @@
             <div class="scrollLeft"><img src="assets/images/text_valorant_horizontal.png" alt="valorant"></div>
         </div><!-- updateSection end -->
 
+
+        <!-- 에피소드7: 에볼루션 카드 전체 상품 start -->
+        <section class="modarPopup" id="modarCardItem">
+            <div class="modarCenter">
+                <div class="modarInner">
+                    <div class="modarBody">
+                        <h3 class="popupTitleSm">에피소드7: 에볼루션 카드 전체 상품</h3>
+                        <div class="scrollBox">
+                            <ul class="dotList">
+                                <li>컬쳐랜드 1,000원</li>
+                                <li>컬쳐랜드 2,000원</li>
+                                <li>컬쳐랜드 3,000원</li>
+                                <li>투썸플레이스 떠먹는 스트로베리 초콜릿 생크림</li>
+                                <li>롯데리아 순살치킨하프팩</li>
+                                <li>맘스터치 싸이버거 세트</li>
+                                <li>빽다방 피스타치오 빽스치노(소프트)</li>
+                                <li>스타벅스 아이스 자몽 허니 블랙 티 T</li>
+                                <li>CU 빙그레 바나나우유240ml</li>
+                                <li>GS25 모바일 상품권 3천원권</li>
+                                <li>KFC 타워버거 </li>
+                                <li>CU 롯데 크런키 더블크런치바</li>
+                                <li>GS25 빼빼로 하나더 세트</li>
+                                <li>GS25 ABC 밀크 초콜릿 72g</li>
+                                <li>레이저 바실리스크 X 하이퍼스피드 무선 게이밍 마우스</li>
+                                <li>커세어 HS65 SURROUND 7.1</li>
+                                <li>로지텍G G413</li>
+                                <li>노트 - 네온</li>
+                                <li>노트 - 제트</li>
+                                <li>노트 - 체임버</li>
+                                <li>노트 - 레이나</li>
+                                <li>슬림텀블러 - VALORANT</li>
+                                <li>반팔티셔츠 - 네온</li>
+                                <li>반팔티셔츠 - 체임버</li>
+                                <li>쿠션 - 전원탑승</li>
+                                <li>장패드 - 제트</li>
+                                <li>장패드 - 일월오봉도</li>
+                                <li>힙색 (2022ver)</li>
+                                <li>캡모자(2022ver)</li>
+                                <li>캔버스백 - 블랙</li>
+                                <li>컬쳐랜드 30,000원</li>
+                                <li>LG전자 80cm QHD 울트라기어 게이밍 모니터</li>
+                            </ul>
+                        </div>
+                    </div><!-- modarBody end -->
+                    <button type="button" class="btnCloseModar">닫기</button>      
+                </div><!-- modarInner end -->
+            </div><!-- modarCenter end -->
+        </section>
+        <!-- 에피소드7: 에볼루션 카드 전체 상품 end -->
     </div><!-- wrap end -->
 
     <!-- 라이엇바 하단 -->
