--- a/popup_sample.html
+++ b/popup_sample.html
@@ -193,7 +193,7 @@
                     <div class="modarBody">
                         <h3 class="popupTitleLg">이벤트<br />공유하기</h3>
                         <!-- [전달사항] value 값에 복사할 url을 넣어주세요. -->
-                        <input type="text" value="복사할 url" id="inputUrl" style="position: absolute;top: -9999em;">
+                        <input type="text" value="복사할 url22" id="inputUrl" style="position: absolute;top: -9999em;">
                         <div class="shareBtnGroup">
                             <button type="button" onclick="urlCopy();" class="shareUrl CloseModar"><span>url</span></button>
                             <button type="button" class="shareKakao CloseModar"><span>카카오톡</span></button>
